--- a/config.ini
+++ b/config.ini
@@ -13,9 +13,12 @@ sku_id = 100012043978
 seckill_num = 1
 # 设定时间
 # 修改成几点几分几秒几毫秒 以下时间根据jd抢购时间修改
+; buy_time = 09:59:59.500
 buy_time = 09:59:59.500
+
 # 每天的最后购买时间
-last_purchase_time = 10:00:03.000
+last_purchase_time = 10:03:00.000
+
 # 默认UA
 DEFAULT_USER_AGENT = "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.88 Safari/537.36"
 # 是否使用随机 useragent，默认为 false
@@ -33,5 +36,5 @@ payment_pwd = ""
 # 使用了Server酱的推送服务
 # 如果想开启下单成功后消息推送，则将 enable 设置为 true，默认为 false 不开启推送
 # 开启消息推送必须填入 sckey，如何获取请参考 http://sc.ftqq.com/3.version。感谢Server酱～
-enable = false
-sckey =
+enable = true
+sckey = 'SCU147567T2131cc75a5c01ea7c97244edab8492395ff7d814bd79d'
